--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -7,7 +7,25 @@ body {
     padding:0; margin:0; overflow-x:hidden;
 }
 
+#container {
+    margin: 0 auto;
+    margin-top: 30px;
+    width: 1150px;
+    height: 800px;
+}
+
+#about_container {
+    margin: 0 auto;
+    margin-top: 30px;
+    width: 1150px;
+}
+
 /*-------------------------| Top |-------------------------*/
+
+#menu {
+    margin: 0 auto;
+    width: 1150px;
+}
 
 /*-------------------------| Footer |-------------------------*/
 
