--- a/views/about.html
+++ b/views/about.html
@@ -1,4 +1,10 @@
 <div class="ui piled segment" id="about_container">
     <h2>關於 D3Example</h2>
-    <p></p>
+    <p>主要是上 <a href="https://github.com/zbryikt">tkirby</a> 在 <a href="http://0media.tw/">0media</a> 所開的 D3 系列課程，個人所練習的範例。</p>
+
+    <h2 class="ui header">目前上過的課程：</h2>
+    <div class="ui bulleted list">
+        <a class="item" href="https://www.facebook.com/groups/284238305064510/permalink/306876596134014/">第 0 次 D3js</a>
+        <a class="item" href="https://g0v.hackpad.com/d3js-for-Dummies-IFD04wXigfh">D3 for Dummies</a>
+    </div>
 </div>
