--- a/views/d3ex2.html
+++ b/views/d3ex2.html
@@ -1,3 +1,24 @@
 <div ng-controller="d3ex2Ctrl">
+    <h2 class="ui header">Exercise 1</h1>
+    <div class="ui segment">
+        <svg width="100px" height="100px" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="ex1">
+            <circle cx="10" cy="10" r="10"></circle>
+            <circle cx="50" cy="10" r="10"></circle>
+            <path d="M10,40 A25,25 0 1,0 50,40" fill="#fff" stroke="#000" stroke-width="5"></path>
+        </svg>
+    </div>
+    <h2 class="ui header"> Exercise 2</h2>
+    <div class="ui segment">
+        <svg width="900px" height="200px" viewBox="0 0 900 200" preserveAspectRatio="xMidYMid" class="ex2">
+    </div>
 
+    <h2 class="ui header"> Exercise 3</h2>
+    <div class="ui segment">
+        <svg width="500px" height="500px" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid" class="ex3">
+    </div>
+
+    <h2 class="ui header"> Exercise 4</h2>
+    <div class="ui segment">
+        <svg width="500px" height="500px" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid" class="ex4">
+    </div>
 </div>
